# pydantic-ai-tool-budget

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
scripts/: release.py
src/pydantic_ai_tool_budget/: __init__.py  _budget.py  _budgeted.py  _toolset.py
tests/: conftest.py  json_body_serializer.py  test_budgeted.py  test_release_script.py  test_tool_budget.py  test_vcr_gemini.py
tests/cassettes/test_vcr_gemini/: test_gemini_budget_reminders[asyncio].yaml  test_gemini_custom_formatter[asyncio].yaml  test_gemini_multiple_tools[asyncio].yaml  test_gemini_threshold_filtering[asyncio].yaml
